expand collapse button tooltip issue fixed for safari browser

--- a/src/app/components/core/configuration-manager/kv-list-type-configuration/kv-list-type-configuration.component.css
+++ b/src/app/components/core/configuration-manager/kv-list-type-configuration/kv-list-type-configuration.component.css
@@ -18,7 +18,7 @@
 .btn-panel-container {
   height: 15px;
   position: relative;
-  z-index: 1;
+  z-index: 5;
   display: flex;
 }
 
